# aicos-cc-adk

./: .gitignore  .mcp.json  .~lock.portfolio-research-summary.xlsx#  CHECKPOINT.md  CLAUDE.md  CONTEXT.md  COWORK_INSTRUCTIONS.md  FOLDER-INDEX.md  LEARNINGS.md  TRACES.md  ai-cos-skill-preview.md  investment-action-triage-ux-patterns.json  investment-action-triage-ux-patterns.md  notion-mastery-v1.2.0.skill  worktree_test.txt  ziAmr2ZQ  ziFWhB2E  ziPCTIhM  zivNSN1x
Archives/mcp-servers-v1/ai-cos-mcp/: .gitignore  deploy.sh  pyproject.toml
mcp-servers/agents/: .gitignore  deploy-with-lock.sh  deploy.sh  pyproject.toml
mcp-servers/agents/cindy/: CHECKPOINT_FORMAT.md  CLAUDE.md  __init__.py
mcp-servers/agents/content/: CLAUDE.md  agent.py  hooks.py  runner.py  server.py  system_prompt.md  tools.py
mcp-servers/agents/cron/: health_check.sh
mcp-servers/agents/datum/: CHECKPOINT_FORMAT.md  CLAUDE.md
mcp-servers/agents/deploy/: DROPLET-MANIFEST.md  bootstrap.sh  cleanup.sh
mcp-servers/agents/eniac/: CHECKPOINT_FORMAT.md  CLAUDE.md
mcp-servers/agents/infra/: content-agent.service  health_check.sh  orchestrator.service  state-mcp.service  web-tools-mcp.service
mcp-servers/agents/megamind/: CHECKPOINT_FORMAT.md  CLAUDE.md
mcp-servers/agents/orchestrator/: CHECKPOINT_FORMAT.md  CLAUDE.md  COMPACTION_PROTOCOL.md  HEARTBEAT.md  lifecycle.py
mcp-servers/agents/scripts/: preflight.sh
mcp-servers/agents/shared/: logging.py
mcp-servers/agents/sql/: interactions_embedding_triggers.sql  v1.0-baseline-schema.sql  v2.2-migrations.sql  v2.3-cindy-conversation-log.sql
(+3327 files in other folders)
