[project]
name = "aicos-agents"
version = "1.0.0"
requires-python = ">=3.11"
dependencies = [
    "claude-agent-sdk==0.1.48",
    "fastmcp>=2.0.0",
    "playwright>=1.49",
    "httpx>=0.27",
    "aiohttp>=3.9",
    "asyncpg>=0.29",
    "psycopg2-binary>=2.9",
    "python-dotenv>=1.0",
    "python-json-logger>=2.0",
    "yt-dlp>=2024.1",
    "youtube-transcript-api>=1.0",
    "pybreaker>=1.2",
]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["web/tests", "state/tests", "tests"]
asyncio_mode = "auto"
